; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_extents.c_ext4_ext_truncate.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_extents.c_ext4_ext_truncate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext4_ext_truncate(i8* %0, %struct.inode* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.inode*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.inode* %1, %struct.inode** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load %struct.inode*, %struct.inode** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @ext4_ext_remove_space(i8* %8, %struct.inode* %9, i64 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %3
  %15 = load i8*, i8** %4, align 8
  %16 = load %struct.inode*, %struct.inode** %5, align 8
  %17 = call i32 @ext4_mark_inode_dirty(i8* %15, i32* null, %struct.inode* %16)
  store i32 %17, i32* %7, align 4
  br label %18

18:                                               ; preds = %14, %3
  %19 = load i32, i32* %7, align 4
  ret i32 %19
}

declare dso_local i32 @ext4_ext_remove_space(i8*, %struct.inode*, i64) #1

declare dso_local i32 @ext4_mark_inode_dirty(i8*, i32*, %struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
